Fix deprecated API usage in extractors and repositories